Removed src config, defaults to blank if no config present. Will stay persistent on close/open.